src/objects/Education_History__c.object
<CustomObject>
    <description>This is an object used to store the education history of the user.</description>
    <fields>
        <fullName>Applicant_Licensee_Name__c</fullName>
        <formula>IF(License__c != NULL,  HYPERLINK(&apos;https://wadolbuspro--dev.lightning.force.com/lightning/r/Contact/&apos;&amp; License__r.MUSW__Applicant__r.Id  &amp;&apos;/view&apos;, License__r.Applicant_Full_Name__c),

IF(License__c = NULL &amp;&amp;  Renewal_Reinstatement_Application__c != NULL,  HYPERLINK(&apos;https://wadolbuspro--dev.lightning.force.com/lightning/r/Contact/&apos;&amp;Renewal_Reinstatement_Application__r.Applicant__r.Id&amp;&apos;/view&apos;, Renewal_Reinstatement_Application__r.License__r.Applicant_Full_Name__c),

HYPERLINK(&apos;https://wadolbuspro-dev.lightning.force.com/lightning/r/Contact/&apos;&amp; Request__r.Contact__r.Id &amp;&apos;/view&apos;, Request__r.Contact__r.Full_Name__c)))</formula>
        <label>Applicant/Licensee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_BG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>This the application type of the credential.</description>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW_Application2__c</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Historical Comment</description>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the contact related to the Education history</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_of_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Completion_Date__c</fullName>
        <label>Course Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Hours_or_Units__c</fullName>
        <label>Course Hours or Units</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Provider_or_School__c</fullName>
        <label>Course Provider or School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <label>Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>License_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <label>Credits</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>This is a list of the degree types accepted.</description>
        <label>Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Education Program</description>
        <label>Education Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Educational_Institution_Name__c</fullName>
        <formula>Educational_Institution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Educational Institution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Educational_Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Education Institution</description>
        <label>Educational Institution</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Education Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <description>This is the end date of the education history.</description>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Approval_Expiry_Date__c</fullName>
        <label>Exam Approval Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Check_In_Time__c</fullName>
        <description>Time the applicant is scheduled to check-in for the exam</description>
        <inlineHelpText>Time the applicant is scheduled to check-in for the exam</inlineHelpText>
        <label>Exam Check-In Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Exam_Id__c</fullName>
        <externalId>true</externalId>
        <label>Exam Id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Exam_Location__c</fullName>
        <description>Address where the applicant will take the exam</description>
        <inlineHelpText>Address where the applicant will take the exam</inlineHelpText>
        <label>Exam Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exam_Pass_Date__c</fullName>
        <label>Exam Pass Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Required_Score__c</fullName>
        <description>Score required to pass the exam</description>
        <inlineHelpText>Score required to pass the exam</inlineHelpText>
        <label>Exam Required Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exam_Result_Expiry_Date__c</fullName>
        <label>Exam Result Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Scheduled_Time__c</fullName>
        <description>Time the applicant is scheduled to take exam</description>
        <inlineHelpText>Time the applicant is scheduled to take exam</inlineHelpText>
        <label>Exam Scheduled Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Exam_Type__c</fullName>
        <label>Exam Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exam_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HSW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Id__c</fullName>
        <description>Foreign Key for Data Migration of Legacy Data</description>
        <label>License Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Program_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the credential the license is related to.</description>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <label>Minor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Institution__c</fullName>
        <label>Name of Institution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSHA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OSHA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>Other Institution name</description>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which permit is this education history record related to?</description>
        <label>Permit</label>
        <referenceTo>MUSW__Permit2__c</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <label>Provider</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Reinstatement_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal &amp; Reinstatement Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reschedule_Possible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reschedule Possible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review</label>
        <referenceTo>MUSW__Review__c</referenceTo>
        <relationshipLabel>Education History</relationshipLabel>
        <relationshipName>Education_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This is the start date at the insitution</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>State_Provinces</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Results Pending</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trainer_License__c</fullName>
        <label>Trainer License</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Education History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>License__c</columns>
        <columns>Name_of_Institution__c</columns>
        <columns>Major__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Exams</fullName>
        <columns>NAME</columns>
        <columns>Exam_Type__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Education_History__c.Exam</value>
        </filters>
        <label>Exams</label>
    </listViews>
    <nameField>
        <displayFormat>EDUH-{000000}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Education History</pluralLabel>
    <recordTypes>
        <fullName>Continuing_Education</fullName>
        <active>true</active>
        <label>Continuing Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Education</fullName>
        <active>true</active>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exam</fullName>
        <active>true</active>
        <label>Exam</label>
    </recordTypes>
    <recordTypes>
        <fullName>Qualifying_Education</fullName>
        <active>true</active>
        <label>Qualifying Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Training</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>